:construction: fix list overflow

--- a/src/styles/DrumMachine.css
+++ b/src/styles/DrumMachine.css
@@ -227,34 +227,7 @@
   grid-area: 3 / 7 / span 2 / span 4;
   display: grid;
   grid-template: 0.5em 1fr 0.5em 3fr 0.5em / 0.5em 1fr 0.5em;
-}
-
-.gspatternList > input, .gsrecordList > input {
-  grid-area: 2 / 2 / span 1 / span 1;
-  border: 2px solid white;
-  border-radius: 0.5em;
-  background: transparent;
-  width: calc(100% - 6px);
-}
-
-.listCont {
-  grid-area: 4 / 2 / span 1 / span 1;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.listCont > .renderedLi {
-  display: grid;
-  grid-template: 1fr / 9fr 1fr;
-}
-
-.listCont > .renderedLi > button {
-  background-color: transparent;
-  text-align: left;
-}
-
-.renderedLi:hover {
-  background-color: #d8b98a;
+  min-height: 0;
 }
 
 .gschainIcon {
@@ -317,6 +290,35 @@
   grid-area: 9 / 7 / span 1 / span 4;
   display: grid;
   grid-template: 0.5em 1fr 0.5em 3fr 0.5em / 0.5em 1fr 0.5em;
+  min-height: 0;
+}
+
+.gspatternList > input, .gsrecordList > input {
+  grid-area: 2 / 2 / span 1 / span 1;
+  border: 2px solid white;
+  border-radius: 0.5em;
+  background: transparent;
+  width: calc(100% - 6px);
+}
+
+.gspatternList .listCont, .gsrecordList .listCont {
+  grid-area: 4 / 2 / span 1 / span 1;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.listCont > .renderedLi {
+  display: grid;
+  grid-template: 1fr / 9fr 1fr;
+}
+
+.listCont > .renderedLi > button {
+  background-color: transparent;
+  text-align: left;
+}
+
+.renderedLi:hover {
+  background-color: #d8b98a;
 }
 
 .gsprojectName {
